--- a/TUBES/app/src/main/res/values/strings.xml
+++ b/TUBES/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TUBES</string>
     <string name="openDrawer">Open</string>
     <string name="closeDrawer">Close</string>
+    <string name="fontSize">Font Size</string>
 </resources>
