--- a/TUBES/app/src/main/res/values/strings.xml
+++ b/TUBES/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="fontSize">Font Size</string>
     <string name="judul_foto">Judul Foto</string>
     <string name="diary_list">Diary List</string>
+    <string name="back">BACK</string>
 </resources>
